2010-08-25  Julian Brown  <julian@codesourcery.com>

	* ld-arm/arm-elf.exp (armelftests): Add cortex-a8-fix-blx-bcond.s.
	* ld-arm/cortex-a8-fix-blx-bcond.s: New.
	* ld-arm/cortex-a8-fix-blx-bcond.d: New.

2010-08-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-x86-64/x86-64.exp: Fix typos.

2010-08-23  Maciej W. Rozycki  <macro@codesourcery.com>

	* ld-mips-elf/attr-gnu-4-04.d: Adjust Tag_GNU_MIPS_ABI_FP for
	the new MIPS32r2 64-bit FPU description.
	* ld-mips-elf/attr-gnu-4-40.d: Likewise.
	* ld-mips-elf/attr-gnu-4-44.d: Likewise.

2010-08-22  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/11933
	* ld-x86-64/mixed1a.s: New.
	* ld-x86-64/mixed1b.s: Likewise.
	* ld-x86-64/mixed2a.s: Likewise.
	* ld-x86-64/mixed2b.s: Likewise.

	* ld-x86-64/x86-64.exp: Test mixed x86_64 and i386 inputs.

2010-08-20  Maciej W. Rozycki  <macro@codesourcery.com>

	* ld-sh/sh.exp: Add missing newline.

2010-08-20  Maciej W. Rozycki  <macro@codesourcery.com>

	* ld-mips-elf/attr-gnu-4-01.d: Correct Tag_GNU_MIPS_ABI_FP.
	* ld-mips-elf/attr-gnu-4-02.d: Likewise.
	* ld-mips-elf/attr-gnu-4-10.d: Likewise.
	* ld-mips-elf/attr-gnu-4-11.d: Likewise.
	* ld-mips-elf/attr-gnu-4-15.d: Likewise.
	* ld-mips-elf/attr-gnu-4-20.d: Likewise.
	* ld-mips-elf/attr-gnu-4-22.d: Likewise.
	* ld-mips-elf/attr-gnu-4-25.d: Likewise.

2010-08-19  Alan Modra  <amodra@gmail.com>

	* ld-scripts/memory.t: Remove ORIGIN fudge.

2010-08-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/11913
	* ld-i386/discarded1.d: New.
	* ld-i386/discarded1.s: Likewise.
	* ld-i386/discarded1.t: Likewise.
	* ld-x86-64/discarded1.d: Likewise.
	* ld-x86-64/discarded1.s: Likewise.
	* ld-x86-64/discarded1.t: Likewise.

	* ld-i386/i386.exp: Run discarded1.
	* ld-x86-64/x86-64.exp: Likewise.

2010-08-09  Catherine Moore  <clm@codesourcery.com>

	* ld-mips-elf/mode-change-error-1.d: New.
	* ld-mips-elf/mode-change-error-1a.s: New.
	* ld-mips-elf/mode-change-error-1b.s: New.
	* ld-mips-elf/mips-elf.exp: Run new test.

2010-08-06  Alan Modra  <amodra@gmail.com>
