@@ -1,0 +1,5 @@
+        .section .sec.foo
+        .word 1
+
+        .section .sec..foo
+        .word 2
